idea/testData/multiplatform/jvmInlineValueClass/common/common.kt
package kotlin.jvm

expect value class <!LINE_MARKER("descr='Has actuals in JVM'")!>VC<!>(val i: Int)